added implementation HU-12
