# src/main/java/com/pragma/restaurants/application/handler/impl/OrderHandler.java
@@ -2,11 +2,15 @@ package com.pragma.restaurants.application.handler.impl;
 
 import com.pragma.restaurants.application.dto.OrderRequest;
 import com.pragma.restaurants.application.dto.OrderResponse;
+import com.pragma.restaurants.application.dto.PagedOrderResponse;
 import com.pragma.restaurants.application.handler.IOrderHandler;
+import com.pragma.restaurants.application.mapper.IOrderPageMapper;
 import com.pragma.restaurants.application.mapper.IOrderRequestMapper;
 import com.pragma.restaurants.application.mapper.IOrderResponseMapper;
 import com.pragma.restaurants.domain.api.IOrderServicePort;
 import com.pragma.restaurants.domain.model.Order;
+import com.pragma.restaurants.domain.model.Page;
+import com.pragma.restaurants.domain.model.enums.OrderStatus;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -19,10 +23,19 @@ public class OrderHandler implements IOrderHandler {
     private final IOrderServicePort orderServicePort;
     private final IOrderRequestMapper orderRequestMapper;
     private final IOrderResponseMapper orderResponseMapper;
+    private final IOrderPageMapper orderPageMapper;
 
     @Override
     public OrderResponse createOrder(OrderRequest orderRequest) {
         Order order = orderRequestMapper.toDomain(orderRequest);
         return orderResponseMapper.toResponse(orderServicePort.save(order));
     }
+
+    @Override
+    public PagedOrderResponse listOrdersByStatus(String status, int page, int size) {
+        OrderStatus orderStatus = OrderStatus.valueOf(status);
+        Page<Order> orderPage = orderServicePort.findByRestaurantAndStatus(orderStatus, page, size);
+        return orderPageMapper.toResponse(orderPage);
+    }
+
 }
